# eps4400-pico

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Calibration/: CalibrationData.cpp  CalibrationData.hpp  CalibrationProvider.cpp  CalibrationProvider.hpp
src/Core/: Orchestrator.cpp  Orchestrator.hpp
src/Hardware/Analog/: Analog.cpp  Analog.hpp
src/Hardware/CAN/: Can.hpp  MCP2517FD.cpp  MCP2517FD.hpp
src/Hardware/CAN/mcp2518fd/: mcp2518fd_can.cpp  mcp2518fd_can.h  mcp2518fd_can_dfs.h  mcp_can_fd.cpp  mcp_can_fd.h
src/Hardware/DAC/: Dac.hpp  MCP4922.cpp  MCP4922.hpp
src/Hardware/Relay/: Relay.cpp  Relay.hpp
src/Monitoring/: PlatformWatchdog.hpp
src/Monitoring/Analog/: DriverTorqueMonitor.hpp
src/Monitoring/CAN/: BrakePressMonitor.hpp  ClutchPressMonitor.hpp  FrameIntervalMonitor.hpp
src/Output/: CanOutput.cpp  CanOutput.hpp  JsonFormatter.hpp  Output.cpp  Output.hpp  SerialOutput.cpp  SerialOutput.hpp
src/Platform/: PlatformPinout.hpp
src/State/: ControlMode.hpp  ControllerState.hpp  StateManager.cpp  StateManager.hpp
